<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LCp</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="sequent_simbol"> |- </string>
    <string name="type_something">Type something...</string>
    <string name="calculate_result">Calculate!</string>
    <string name="introduction_main">For start, type below your sequents. Then, press \"Calculate!\" button in order to get the solution.</string>
    <string name="btn_calculate_working">I\'m working...</string>
    <string name="reset">Reset</string>
    <string name="title_activity_canvas_solve_p">Result - LCp</string>
    <string name="btn_calculate_intro">Pressing this button, the sequent will calculate by LCp.</string>
    <string name="btn_reset_intro">With this button you can reset your input and come back as new!</string>
</resources>
