<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainPActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/abc_action_bar_progress_bar_size" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seqSx"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="110dp"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2"
        android:inputType="textNoSuggestions"
        android:textSize="@dimen/hint_main"
        android:hint="@string/type_something"
        android:textColor="#ff787878" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seqDx"
        android:layout_alignTop="@+id/seqSx"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:inputType="textNoSuggestions"
        android:textSize="@dimen/hint_main"
        android:textColor="#ff787878"
        android:hint="@string/type_something" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sequent_simbol"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/seqDx"
        android:layout_centerHorizontal="true"
        android:textSize="24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_result"
        android:id="@+id/calculate_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction_main"
        android:id="@+id/introduction"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/seqDx"
        android:layout_alignRight="@+id/seqDx"
        android:layout_alignEnd="@+id/seqDx"
        android:textSize="@dimen/hint_main" />
</RelativeLayout>
